--- a/khan-internship/style.css
+++ b/khan-internship/style.css
@@ -64,6 +64,10 @@ a:active {
     text-decoration: none;
 }
 
+.header .twitter-button {
+    float: right;
+}
+
 .shadow-frame {
     border: 1px solid #ddd;
     box-shadow: 0 1px 15px rgba(0, 0, 0, 0.1);
@@ -127,14 +131,6 @@ pre {
 
 .media-caption.right {
     float: right;
-}
-
-.hipchat-screenshot-container {
-    margin-left: -50px;
-}
-
-.scheme-screenshot-container {
-    margin-left: -86px;
 }
 
 #overlay-background {
