--- a/khan-internship/style.css
+++ b/khan-internship/style.css
@@ -65,10 +65,6 @@ a:active {
     text-decoration: none;
 }
 
-.header .twitter-button {
-    float: right;
-}
-
 .shadow-frame {
     border: 1px solid #ddd;
     box-shadow: 0 1px 15px rgba(0, 0, 0, 0.1);
@@ -238,4 +234,13 @@ img.clickable:active {
     border-radius: 12px;
     border: 2px solid #ccc;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
+}
+
+.scratchpad-view-sandwich {
+    float: right;
+    margin: 0 0 20px 20px;
+}
+
+.clear {
+    clear: both;
 }
