--- a/style.css
+++ b/style.css
@@ -25,6 +25,22 @@ h1.title {
     margin-bottom: 50px;
 }
 
+ol.posts {
+    list-style: none;
+    margin: 30px 0;
+    padding: 0;
+}
+
+ol.posts li {
+    margin-bottom: 15px;
+}
+
+ol.posts .pubdate {
+    display: block;
+    font-size: 12pt;
+    color: #666;
+}
+
 a {
     color: #234789;
 }
